fixed broken tests, core working, ready for we part

--- a/iam-web/src/main/webapp/index.html
+++ b/iam-web/src/main/webapp/index.html
@@ -2,22 +2,22 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Welcome page</title>
+<title>E J A Login page</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
 	<div class="container">
-	<h2 class="title">Welcome to the EPITA Java Application!</h2>
+	<h2 class="title">EPITA Java Application - log in!</h2>
 		
 		<form action="authenticate" method="post" role="form">
 			<div class="form-group">
-				<label>login</label>
+				<label>Login</label>
 				<input class="form-control" name="login" type="text" placeholder="Login">
 			</div>
 			<div class="form-group">
-				<label>password</label>
+				<label>Password</label>
 				<input class="form-control" name="pwd" type="password" placeholder="Password" >
 			</div>
 			<button class="btn" type="submit">Login</button>
